[workspace]
resolver = "2"
members = ["crates/graphql_steel_core", "crates/graphql_steel_core_js"]

[workspace.package]
repository = "https://github.com/oneofthezombies/graphql-ice"
license = "MIT OR Apache-2.0"
edition = "2021"
authors = ["oneofthezombies <hunhoekim@gmail.com>"]

[workspace.dependencies]
wasm-bindgen = "0.2.99"
wasm-bindgen-futures = "0.4.49"
web-sys = { version = "0.3.76", features = ["console"] }
wasm-bindgen-test = "0.3.49"

[profile.release]
panic = "abort"
lto = "fat"
